radio button,edit text in comments,subscribed users listing

--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -856,3 +856,14 @@
     }
   }
 }
+.__react_component_tooltip{
+  .normal_title{
+    padding: 5px;
+    margin: 0;
+  }  
+  .notification-with-subscribe{
+    .user-info{
+      margin-top: 17px;
+    }
+  }
+}
