--- a/src/styles/global/pages/_information.scss
+++ b/src/styles/global/pages/_information.scss
@@ -139,8 +139,10 @@
       }
     }
     .view-more-comments {
-      padding: 0px 17px;
       cursor: pointer;
+      a{
+        color: $silver_color;
+      }
     }
   }
 }
