--- a/src/styles/global/pages/_pics.scss
+++ b/src/styles/global/pages/_pics.scss
@@ -8,6 +8,7 @@
   .pic-block {
       img {
         max-height: 276px;
+        height: 276px;
       }
     }
 }
@@ -15,6 +16,7 @@
   &.gray_content {
     img {
       max-height: 276px;
+      height: 276px;
     }
   }
   img {
