--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -1394,3 +1394,74 @@ section.loader-wrapr {
   background: linear-gradient(360deg, #dee1e1 10%, #f4f4f4 360%); /* W3C */ 
 }
 // .video-js .vjs-big-play-button .vjs-icon-placeholder:before, .video-js .vjs-play-control .vjs-icon-placeholder:before,
+
+.datanotfound-wrapper{
+  background: #f5f5f5;
+  border: 1px solid #ddd;
+  margin: 10px;
+  .notfound-body{
+    border-bottom: 1px solid #ddd;
+    background: #fff;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 5px;
+    .notfound-title{
+      font-size: 16px;
+      font-weight: bold;
+      text-align: center;
+      overflow: hidden;
+      position: relative; 
+      line-height: 1.2em;
+      max-height: 39px;  
+      margin-right: -1em;
+      padding-right: 1em;
+      &::before{
+        content: '...';
+        position: absolute;
+        right: 0;
+        bottom: 0;
+      }
+      &::after{
+        content: '';
+        position: absolute;
+        right: 0;
+        width: 1em;
+        height: 1em;
+        margin-top: 0.2em;
+        background: white;
+      }
+    }
+    .notfound-btn-wrapper{
+      padding-left: 30px;
+      padding-right: 0;
+      @media (max-width: 800px) {
+        padding-left: 0;
+        padding-right: 0;
+      }
+      .filled_button{
+        width: 70px;
+        text-align: center;
+        padding: 10px 5px;
+        @media (max-width: 1024px) {
+          width: 54px;
+          text-align: center;
+          padding: 3px;
+          font-size: 13px;
+        }
+        &:first-child{
+          margin-right: 5px;
+        }
+      }
+    }    
+  }
+  .notfound-footer{
+    margin-left: 0;
+    margin-right: 0;
+    padding: 5px;
+    border-bottom: 1px solid #ddd;
+    .col-md-12{
+      padding-left: 10px;
+      padding-right: 5px;
+    }
+  }
+}
