--- a/src/styles/global/pages/_messages.scss
+++ b/src/styles/global/pages/_messages.scss
@@ -262,6 +262,7 @@
           min-height: calc(100vh - 120px);
           height: calc(100vh - 120px);
           overflow-y: auto;
+          padding-bottom: 60px;
           .full-width {
             width: 100%;
             height: 100%;
