--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -1272,12 +1272,23 @@ section.loader-wrapr {
           color: #4a4a4a;
         }
       }
-      .ReactTags_suggestions {
+      .ReactTags__suggestions {
         border: 1px solid;
         ul{
-          list-style-type: none!important;
+          list-style-type: none;
+          margin-top: 5px;
+          margin-left: 0;
+          padding-left: 0;
+          margin-top: 0;
+          margin-bottom: 0;
           li{
-            border-bottom: 1px solid #ddd!important;
+            border-bottom: 1px solid #ddd;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-left: 5px; 
+            &:last-child{
+              border-bottom: none;
+            }
           }          
         }
       }
