--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -1534,3 +1534,11 @@ section.loader-wrapr {
     }
   }
 }
+.pro-image{
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background: #d3d3d3;
+  border-radius: 50%;
+  padding: 0 0px;
+}
