rightside bar placeholder

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -1075,6 +1075,11 @@ section.loader-wrapr {
   margin-top: 10px !important;
   min-height: 8px !important;
 }
+.desc1sm{
+  width: 40% !important;
+  margin-top: 8px !important;
+  min-height: 5px !important;
+}
 .desc2 {
   width: 90% !important;
 }
