--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -1,3 +1,4 @@
+
 .create-campaign-modal {
   background: #333;
   &.editor-modal {
@@ -365,8 +366,11 @@
     }
     .dates {
       li {
-        width: 163px;
+        width: 48%;
         height: auto;
+        &:nth-child(2n + 1) {
+          margin-right: 4%;
+        }
         label {
           position: static;
           float: left;
@@ -522,6 +526,7 @@
         font-family: "Helvetica-Bold";
         font-size: 20px;
         margin-bottom: 20px;
+        padding: 15px;
       }
       .create-compaign-editor {
         .wrapper-class.rdw-editor-wrapper {
