--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -1,3 +1,4 @@
+
 .user_info {
   @include float();
   margin-bottom: 10px;
@@ -5,10 +6,12 @@
   .user-image {
     width: 20%;
     float: left;
+    height: 234px;
     img {
       width: 100%;
       padding: 3px;
       height: 100%;
+      object-fit: cover;
     }
   }
   .user-details {
@@ -447,19 +450,25 @@
   .right_small_menus {
     float: left;
     padding-top: 10px;
-    span {
-      padding-right: 5px;
-      a {
-        position: relative;
-        padding-left: 7px;
-        &:before {
-          content: "\2022";
-          position: absolute;
-          top: 1px;
-          left: 0;
+    ul{
+      padding-left: 0;
+      list-style: inside;
+      li{
+        display: inline-block;
+        padding-right:28px;
+        padding-left:3px;
+        a{
+          position: relative;
+          padding-left: 7px;
+          &:before {
+            content: "\2022";
+            position: absolute;
+            top: 1px;
+            left: 0;
+          }
+          color: $silver_color;
+          font-size: 12px;
         }
-        color: $silver_color;
-        font-size: 11px;
       }
     }
   }
