--- a/src/styles/global/pages/_privacy.scss
+++ b/src/styles/global/pages/_privacy.scss
@@ -1,3 +1,4 @@
+
 .settings-menu {
   li {
     a {
@@ -27,6 +28,9 @@
       a {
         color: $blue_color;
       }
+    }
+    .action-btns{
+      display: inline-block;
     }
   }
   .limitation-wrapper {
@@ -81,6 +85,16 @@
           &:before {
             border-radius: 50%;
           }
+        }
+      }
+    }
+  }
+  .change-email-wrapper{
+    .new-email{
+      .form-group{
+        img{
+          bottom: 15px;
+          top: initial;
         }
       }
     }
