--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -12,6 +12,9 @@
       padding: 3px;
       height: 100%;
       object-fit: cover;
+      @media (max-width: 1200px){
+        object-fit: contain;
+      }
     }
   }
   .user-details {
@@ -381,7 +384,7 @@
         width: 100%;
       }
       .community-user-image {
-        width: 24%;
+        width: 22%;
         padding: 0px 15px;
         @media (max-width: 1199px) {
           float: left;
@@ -394,10 +397,13 @@
         img {
           max-width: 45px;
           max-height: 45px;
+          width: 45px;
+          height: 45px;
+          object-fit: cover;
         }
       }
       .community-user-name {
-        width: 38%;
+        width: 40%;
         align-self: center;
         @media (max-width: 1199px) {
           float: left;
