compain detail card img css

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -1087,6 +1087,14 @@ section.loader-wrapr {
 .lists{
   width: 50% !important;
 }
+.info-img{
+  width: 70%;
+  overflow: hidden;
+  max-height: 400px;
+}
+.padd-15{
+  padding: 15px !important;
+}
 .hr-color hr{
   border: 1px solid #eee;
 }
