--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -881,12 +881,16 @@
         padding-right: 15px;
       }
       .user-info{
+        padding: 10px 0 0 0;
        .username{
         color: #4a4a4a;
         word-break: break-all;
+        font-weight: 600;
+        text-transform: capitalize;
        }
        .subtitle{
          word-break: break-all;
+         padding: 0 20px;
        }
       }
       .community-subscribe{
