--- a/src/styles/global/pages/_pics.scss
+++ b/src/styles/global/pages/_pics.scss
@@ -1,17 +1,38 @@
 .pic-left-block {
   padding-left: 0px;
   padding-right: 5px;
+  .pic-block {
+    .profile-img-wrapper{
+      width: 100%;
+      max-height: 276px;
+      height: 276px;
+      img {
+        height: 100%;
+        object-fit: cover;
+        @media (max-width: 1200px){
+          object-fit: contain;
+        }
+      }
+    } 
+  }
 }
 .pic-right-block {
   padding-right: 0px;
   padding-left: 5px;
   .pic-block {
+    .profile-img-wrapper{
+      width: 100%;
+      max-height: 276px;
+      height: 276px;
       img {
-        max-height: 276px;
-        height: 276px;
+        height: 100%;
         object-fit: cover;
+        @media (max-width: 1200px){
+          object-fit: contain;
+        }
       }
-    }
+    } 
+  }
 }
 .pic-block {
   &.gray_content {
