--- a/src/styles/global/pages/_user.scss
+++ b/src/styles/global/pages/_user.scss
@@ -10,6 +10,7 @@
       height: 30px;
       padding-top: 6px;
       margin-top: 10px;
+      min-width: 100px;
       &:hover{
         background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
         color: #ffffff;
