fixed campaign details and feed header

--- a/src/styles/global/pages/_information.scss
+++ b/src/styles/global/pages/_information.scss
@@ -124,6 +124,10 @@
         &.wid45 {
           width: 55px;
         }
+        img {
+          width: 45px;
+          height: 45px;
+        }
         
       }
       .comment-input{
