Edit profile description changes added

--- a/src/styles/global/pages/_about.scss
+++ b/src/styles/global/pages/_about.scss
@@ -50,6 +50,13 @@
       }
     }
   }
+
+  .profile-description {
+    .profile-content {
+      padding-bottom: 10px;
+    }
+  }
+
   .inquiry-tag {
     margin-bottom: 35px;
     .tags-wrapper {
