offer tag in profile details page

--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -340,6 +340,14 @@
     @include gradient();
   }
 }
+.profile-img-wrapper{
+  .user_info{
+    padding: 15px 0;
+    div{
+      margin: 0 auto;
+    }
+  }
+}
 .right_bar {
   width: 30%;
   float: right;
