--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -1295,15 +1295,24 @@ section.loader-wrapr {
 // share pop up
 .share-popup.modal {
   &.in {
-    background: rgba(0, 0, 0, 0.4);
+    background: rgba(0, 0, 0, 0.9);
   }
   .modal-dialog {
     margin: 34vh auto;
-    margin-left: 44vw;
+    width:300px;
+    // margin-left: 44vw;
+    .closeBtn{
+      position: absolute;
+      right: -38px;
+      top: -38px;
+      z-index: 9;
+      background: none;
+      border:none;
+    }
   }
   .modal-content,
   .modal-body {
-    // width: 100%;
+    width: 100%;
     float: left;
     background-color: transparent;
     padding: 0;
@@ -1379,7 +1388,7 @@ section.loader-wrapr {
         .social-link-title {
           display: inline-block;
           position: relative;
-          top: -4px;
+          top: 6px;
         }
       }
     }
@@ -1650,4 +1659,7 @@ section.loader-wrapr {
 }
 .margin-left0{
   margin-left: 0 !important;
+}
+.form-control {
+  border-radius: 0;
 }
