--- a/src/styles/global/pages/_pics.scss
+++ b/src/styles/global/pages/_pics.scss
@@ -141,4 +141,10 @@
       min-height: 310px;
     }
   }
+  .name-wrapper{
+    padding: 0 10px;
+    .show_more_options{
+      text-align: right;
+    }
+  }
 }
