social media hover effect

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -1670,3 +1670,7 @@ section.loader-wrapr {
 .form-control {
   border-radius: 0;
 }
+.social-media-link:hover{ 
+    background-image: radial-gradient(circle at 0 100%, #029bd7, #1f58a6);
+    color: #fff;
+}
