user image square height

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -1674,3 +1674,6 @@ section.loader-wrapr {
     background-image: radial-gradient(circle at 0 100%, #029bd7, #1f58a6);
     color: #fff;
 }
+.user_info .user-image{
+  height: auto !important;
+}
