--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -1677,3 +1677,16 @@ section.loader-wrapr {
     background-image: radial-gradient(circle at 0 100%, #029bd7, #1f58a6);
     color: #fff;
 }
+.social-media-link svg{ 
+  transform: scale(2.5);
+  top: 9px !important;
+}
+.social-media-link{
+  overflow: hidden;
+  padding: 0px 15px !important;
+  height: 50px;
+}
+.social-media-link .social-link-title{
+  font-size: 16px;
+  vertical-align: middle;
+}
