history/error log

--- a/log-dashboard/src/App.css
+++ b/log-dashboard/src/App.css
@@ -50,3 +50,82 @@
   z-index: 1000;
 } */
 
+.log-data{
+  padding:30px 20px;
+}
+.log-data .log-data-header{
+  font-size: 24px;
+  margin: 10px 0;
+  padding: 10px 0;
+  border-bottom: 1px solid #000;
+}
+.log-data-tabs{
+  padding: 0;
+  display: inline-block;
+  margin: 20px 0 40px;
+}
+.log-data-tabs li{
+  display: inline-block;
+  float: left;
+  margin: 10px 30px 10px 0;
+}
+.log-data-tabs li a{
+  color: black;
+  font-size: 16px;
+  text-decoration:none;
+  padding: 10px 0;
+}
+.log-data-tabs li a.active{
+  border-bottom: 3px solid #000;
+}
+.MuiTypography-h6-255,.MuiTypography-h6-54{
+  font-size: 20px !important;
+}
+.App table thead >tr >th,.App table tbody >tr >td,.App table tfoot >tr >td,.App table tfoot >tr >td >span.MuiTypography-caption-47{
+  font-size: 14px;
+  color: black;
+}
+.App table thead >tr >th{
+  font-weight: 600;
+}
+.App table tbody >tr >td .messageInfo{
+  margin-bottom: 0;
+}
+.App table tbody >tr >td .messageInfo .btn-margin{
+  background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
+  color: #ffffff;
+  border:1px solid #1f58a6;
+  padding: 6px 20px;
+}
+.MuiTypography-caption-47,.MuiTypography-caption-248,.MuiInputBase-input-301{
+  font-size: 14px !important;
+  color: black !important;
+}
+
+
+
+
+.MuiTooltip-tooltip-315,.MuiTooltip-touch-316 {
+  color: #fff;
+  padding: 4px 8px;
+  font-size: 12px !important;
+  max-width: 300px;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  line-height: 1.4em;
+  border-radius: 4px;
+  background-color: #616161;
+}
+
+.data-log-modal .modal-dialog .modal-body{
+  height: 400px;
+  overflow: auto;
+}
+.data-log-modal .modal-footer .btn.btn-default{
+  background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
+  color: #ffffff;
+  border:1px solid #1f58a6;
+  border-radius: 0;
+}
+.data-log-modal .modal-content{
+  border-radius: 0;
+}
