--- a/src/styles/global/pages/_create-ad.scss
+++ b/src/styles/global/pages/_create-ad.scss
@@ -273,11 +273,12 @@
       }
       .profile_image {
         float: left;
-        &.wid45{
-          width: 55px;
+        &.wid45 {
+          width: 45px;
         }
         img {
           width: 45px;
+          height: 45px;
           margin-right: 10px;
         }
       }
