--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -198,10 +198,11 @@
       .profile_image {
         float: left;
         &.wid45{
-          width: 55px;
+          width: 45px;
         }
         img {
           width: 45px;
+          height: 45px;
           margin-right: 10px;
         }
       }
