fixed the user chat

--- a/src/styles/global/pages/_messages.scss
+++ b/src/styles/global/pages/_messages.scss
@@ -238,6 +238,7 @@
             margin-right: 10px;
             img {
               width: 45px;
+              height: 45px;
               border-radius: 50%;
             }
           }
