--- a/log-dashboard/src/App.css
+++ b/log-dashboard/src/App.css
@@ -2,6 +2,67 @@
   text-align: center;
 }
 
+.login-logo1 {
+  text-align: center;
+  padding: 13px;
+  width: 100%;
+}
+
+.login-process .login-header-menu {
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  right: 0;
+  top: 20px;
+}
+
+.login-process .login-header-menu li a {
+  color: #fff;
+  font-size: 18px;
+  margin-left: 30px;
+  font-family: "Helvetica-Bold";
+  text-decoration: none;
+}
+
+ul, menu, dir {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+
+.login-process .custom-container {
+  width: 700px;
+  margin: auto;
+  position: relative;
+}
+
+.login-process {
+  background: #fff;
+  float: left;
+  width: 100%;
+  padding-bottom: 10px;
+
+}
+
+.login-process header {
+  background-color: #1575bb;
+  z-index: 1000 !important;
+  position: relative;
+}
+
+header {
+  float: left;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+    background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -16,6 +77,10 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+a {
+  color: #337ab7;
+  text-decoration: none;
 }
 
 .App-link {
@@ -51,7 +116,7 @@
 }
 
 .log-data{
-  padding:30px 20px;
+  
 }
 .log-data .log-data-header{
   font-size: 24px;
