--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -581,6 +581,7 @@
     .feed_image {
       img {
         width: 100%;
+        height: 100%;
         &.big {
           min-height: 35vh;
           padding: 0 7px;
@@ -1024,4 +1025,13 @@
     -webkit-transform: scale(1);
     transform: scale(1);
      border: 1px solid transparent;
+}
+
+.cookieConsent {
+  z-index: 9999 !important;
+}
+.feed_wrapper .feed_content .feed_description.news-feed-data .secondary_title{
+  text-overflow: unset;
+  overflow: visible;
+  display: inline-block;
 }
