--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -1035,3 +1035,11 @@
   overflow: visible;
   display: inline-block;
 }
+
+.content_13hv8io{
+  .footer_60scne{
+    .footerCount_lkhc9u{
+      display: none;
+    }
+  }
+}
