implementation of the cms module

--- a/src/styles/global/cms/_cms.scss
+++ b/src/styles/global/cms/_cms.scss
@@ -72,6 +72,11 @@ header {
         width: 100%;
       }
     }
+    .cms-page-content{
+      height:100vh;
+      padding: 20px;
+      background: #ffffff;
+    }
   }
   .support-accordion {
     .panel {
