--- a/src/styles/global/pages/_messages.scss
+++ b/src/styles/global/pages/_messages.scss
@@ -139,6 +139,7 @@
                 border-radius: 50%;
                 float: left;
                 margin-right: 10px;
+                object-fit: cover;
               }
             }
             .username {
