--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -537,6 +537,7 @@
         height: 45px;
         min-width: 45px;
         min-height: 45px;
+        object-fit: cover;
         &.profile_pic_gray {
           height: 35px;
           width: 35px;
@@ -574,6 +575,7 @@
     float: left;
     width: 100%;
     video {
+
       // background: url("../images/play_video_back.png") no-repeat 50% #000;
       background-size: contain;
       background-position: center;
@@ -582,6 +584,7 @@
       img {
         width: 100%;
         height: 100%;
+        object-fit: cover;
         &.big {
           min-height: 35vh;
           padding: 0 7px;
@@ -1029,6 +1032,19 @@
 
 .cookieConsent {
   z-index: 9999 !important;
+  p{
+    a{
+      display: inline-block;
+      padding-left:5px;
+    }
+  }
+  button{
+    background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7) !important;
+    color: #ffffff !important;
+    min-width:100px;
+    padding:8px 15px !important;
+    line-height: 17px;
+  }
 }
 .feed_wrapper .feed_content .feed_description.news-feed-data .secondary_title{
   text-overflow: unset;
