--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -67,7 +67,7 @@
   .modal-body {
     display: flex;
     // height: 91%;
-    height: 350px;
+    height: 91%;
     // height: 100%;
     //reverting back
     // &.height100 {
@@ -325,13 +325,22 @@
       }
     }
     .upload-img-wrapper{
+      display: block;
+      width: 100%;
       position: relative;
-      padding-bottom: 56.2%;
+      height: 0;
+      padding-bottom: 56.25%;
+      overflow: hidden;
       img{
         position: absolute;
-        object-fit: cover;
+        display: block;
         width: 100%;
         height: 100%;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
       }
     }
     .target-options {
