--- a/log-dashboard/src/App.css
+++ b/log-dashboard/src/App.css
@@ -132,9 +132,9 @@ a {
 .log-data-tabs li{
   display: inline-block;
   float: left;
-  margin: 10px 30px 10px 0;
+  margin: 10px 30px 10px 10px;
 }
-.log-data-tabs li a{
+.log-data-tabs li a.normal{
   color: black;
   font-size: 16px;
   text-decoration:none;
@@ -143,6 +143,7 @@ a {
 .log-data-tabs li a.active{
   border-bottom: 3px solid #000;
 }
+
 .MuiTypography-h6-255,.MuiTypography-h6-54{
   font-size: 20px !important;
 }
