--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -1059,3 +1059,44 @@
     }
   }
 }
+
+.user-pics-modal{
+  .modal-dialog{
+    margin: 80px auto;
+    .modal-content{
+      .closeBtn {
+          position: absolute;
+          right: -38px;
+          top: -38px;
+          z-index: 9;
+          background: none;
+          border: none;
+      }
+      .modal-body{
+        padding: 10px 0 0;
+        .slider-modal-header{
+          font-size: 18px;
+          padding: 15px 0;
+          margin: 0;
+        }
+        .user-pics-carousel{
+          height: 500px;
+          .slider-wrapper{
+            .slider{
+              .slide {
+                height: 500px;
+                > div{
+                  height: 100%;
+                  img{
+                    height: 100%;
+                    object-fit: contain;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
