profile share arrow

--- a/src/styles/global/layout/_header.scss
+++ b/src/styles/global/layout/_header.scss
@@ -263,6 +263,10 @@ header {
             }
           }
           .tab-content {
+            display: inline-block;
+            height: 400px;
+            width: 100%;
+            overflow: auto;
             .tab-pane {
               .header-notifications {
                 .notification-wrapper {
