--- a/src/styles/global/helpers/index.scss
+++ b/src/styles/global/helpers/index.scss
@@ -3,4 +3,5 @@
 @import "_mixins.scss";
 @import "_icons.scss";
 @import "_common.scss";
-@import "_react_draft_wysiwyg.scss";
+@import "_quill.snow.scss";
+@import "_react-datepicker.scss";
