campaign modal new design

--- a/src/styles/global/pages/_create-ad.scss
+++ b/src/styles/global/pages/_create-ad.scss
@@ -430,3 +430,81 @@
 a.more-strip.zIndex0 {
   z-index: 0;
 }
+.create-ad-modal.upload-pic-modal{
+  .modal-dialog{
+    width:915px;
+    .modal-content{
+      text-align: center;
+      .modal-header{
+        text-align: right;
+      }
+      .modal-body{
+        height: 800px;
+        .box{
+          padding: 12rem 1.25rem;
+          border:1px solid #979797;
+          height: 300px;
+          .inputfile + label{
+            max-width: 100%;
+            margin: 0 auto;
+          }
+        }
+        .range-wrapr.add-wrapper{
+          position: relative;
+          padding: 0 50px;
+          .min-profile-pic{
+            width: 20px;
+            height: 20px;
+            left: 20px;
+            top: 18px;
+          }
+          input[type="range"]{
+            border:none;
+            margin: 15px 25px;
+          }
+          .runnable{
+            left: 55px;
+            top: 26px;
+          }
+          .max-profile-pic{
+            left: -7px;
+            top: 12px;
+          }
+        }
+        .upload-form{
+          padding: 20px 190px;
+          .user-title{
+            .modal-title{
+              font-size: 24px;
+            }
+          }
+          .form-group{
+            label{
+              text-decoration: underline;
+              font-size: 18px;
+              font-family: "Helvetica";
+              font-weight: normal;
+            }
+            p{
+              margin: 5px 0 15px;
+              display: inline-block;
+              width: 100%;
+            }
+            .options{
+              label{
+                text-decoration: none;
+                font-size: 16px;
+                
+              }
+            }
+          }
+        }
+      }
+      .add-wrapper.create-camp-ad-wrapr{
+        img{
+          top: -41px;
+        }
+      }
+    }
+  }
+}
