--- a/src/styles/global/layout/_header.scss
+++ b/src/styles/global/layout/_header.scss
@@ -264,7 +264,7 @@ header {
           }
           .tab-content {
             display: inline-block;
-            height: 400px;
+            max-height: 400px;
             width: 100%;
             overflow: auto;
             .tab-pane {
