--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -122,7 +122,7 @@
       padding: 13rem 1.25rem;
       text-align: center;
       height: 258px;
-      width: 378px;
+      // width: 378px;
       margin: 0 auto;
       .inputfile {
         width: 0.1px;
@@ -272,7 +272,7 @@
     }
     .add-wrapper {
       width: 100%;
-      border-top: 5px solid;
+      // border-top: 5px solid;
       padding-top: 15px;
       text-align: right;
       padding-bottom: 15px;
@@ -772,10 +772,14 @@
     .range-wrapr {
       margin: 0 30%;
       padding-left: 11px;
+      height: 55px;
+      border: 1px solid #979797;
+      margin-bottom: 30px;
+      padding: 12px 0 12px;
       &.mar50 {
         margin: 0;
         width: -webkit-fill-available;
-        padding: 0 40px;
+        padding: 0 0;
         @media (max-width: 915px) {
           padding: 0 5px;
         }
