--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -1560,6 +1560,7 @@ section.loader-wrapr {
 }
 .bg-black {
   background: #000;
+  border: solid 1px #f4f4f4;
   background: -webkit-linear-gradient(
     360deg,
     #dee1e1 10%,
